alignment fixed

--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -33,3 +33,6 @@ a:hover {
 button {
   border-style: none;
 }
+#contact-button-link:hover {
+  text-decoration: none;
+}
